--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *.js linguist-detectable=false
 *.html linguist-detectable=false
 *.css linguist-detectable=false
-*.tex linguist-detectable=false
+*.TeX linguist-detectable=false
